tests/sumo/output/vtypeprobe/errors/freq_missing/errors.sumo
Warning: VTypeProbes are deprecated. Use fcd-output devices (assigned to the vType) instead.
